force-app/main/default/objects/Concrete_Order__c/Concrete_Order__c.object-meta.xml
<CustomObject>
    <label>Concrete Order</label>
    <nameField>
        <displayFormat>CONCRETEORDER-{000000}</displayFormat>
        <label>Concrete Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concrete Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>