force-app/main/default/objects/Concrete_Order__c/fields/Actual_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date_Time__c</fullName>
    <label>Actual Delivery Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>