force-app/main/default/objects/Concrete_Order__c/fields/Actual_Yardage_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Actual_Yardage_Ordered__c</fullName>
    <label>Yardage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>