force-app/main/default/objects/Concrete_Order__c/fields/Calcium__c.field-meta.xml
<CustomField>
    <fullName>Calcium__c</fullName>
    <label>Calcium %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>