force-app/main/default/objects/Concrete_Order__c/fields/Concrete_Supplier_Phone__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Supplier_Phone__c</fullName>
    <formula>HYPERLINK((&apos;tel:&apos;+Supplier__r.Phone), Supplier__r.Phone)</formula>
    <label>Concrete Supplier Phone</label>
    <type>Text</type>
</CustomField>