force-app/main/default/objects/Concrete_Order__c/fields/Cylinder__c.field-meta.xml
<CustomField>
    <fullName>Cylinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cylinder</label>
    <type>Checkbox</type>
</CustomField>