force-app/main/default/objects/Concrete_Order__c/fields/Cylinder_No__c.field-meta.xml
<CustomField>
    <fullName>Cylinder_No__c</fullName>
    <label>Cylinder #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>