force-app/main/default/objects/Concrete_Order__c/fields/DOW__c.field-meta.xml
<CustomField>
    <fullName>DOW__c</fullName>
    <formula>CASE(WEEKDAY(Requested_Date__c), 
1,&quot;Sunday&quot;, 
2,&quot;Monday&quot;, 
3,&quot;Tuesday&quot;, 
4,&quot;Wednesday&quot;, 
5,&quot;Thursday&quot;, 
6,&quot;Friday&quot;, 
7,&quot;Saturday&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>