force-app/main/default/objects/Concrete_Order__c/fields/Fiber__c.field-meta.xml
<CustomField>
    <fullName>Fiber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fiber</label>
    <type>Checkbox</type>
</CustomField>