force-app/main/default/objects/Concrete_Order__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Concrete Orders</relationshipLabel>
    <relationshipName>Concrete_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>