force-app/main/default/objects/Concrete_Order__c/fields/Klient_Project__c.field-meta.xml
<CustomField>
    <fullName>Klient_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Concrete Orders</relationshipLabel>
    <relationshipName>Concrete_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>