force-app/main/default/objects/Concrete_Order__c/fields/Krow_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Krow Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Concrete Orders</relationshipLabel>
    <relationshipName>Concrete_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>