force-app/main/default/objects/Concrete_Order__c/fields/Mix__c.field-meta.xml
<CustomField>
    <fullName>Mix__c</fullName>
    <label>Mix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpvsConcrete_Mix</valueSetName>
    </valueSet>
</CustomField>