force-app/main/default/objects/Concrete_Order__c/fields/Nearest_Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Cross_Street__c</fullName>
    <label>Nearest Cross Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>