force-app/main/default/objects/Concrete_Order__c/fields/Non_Chloride_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Non_Chloride_Accelerator__c</fullName>
    <label>Non Chloride Accelerator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>