force-app/main/default/objects/Concrete_Order__c/fields/Other_Additives__c.field-meta.xml
<CustomField>
    <fullName>Other_Additives__c</fullName>
    <label>Other Additives</label>
    <length>200</length>
    <type>Text</type>
</CustomField>