force-app/main/default/objects/Concrete_Order__c/fields/Plant_Location__c.field-meta.xml
<CustomField>
    <fullName>Plant_Location__c</fullName>
    <label>Plant Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>