force-app/main/default/objects/Concrete_Order__c/fields/Poured__c.field-meta.xml
<CustomField>
    <fullName>Poured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poured</label>
    <type>Checkbox</type>
</CustomField>