force-app/main/default/objects/Concrete_Order__c/fields/Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time__c</fullName>
    <label>Requested Time</label>
    <type>Time</type>
</CustomField>