force-app/main/default/objects/Concrete_Order__c/fields/Retarder__c.field-meta.xml
<CustomField>
    <fullName>Retarder__c</fullName>
    <label>Retarder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>