force-app/main/default/objects/Concrete_Order__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>