force-app/main/default/objects/Concrete_Order__c/fields/What_are_we_pouring__c.field-meta.xml
<CustomField>
    <fullName>What_are_we_pouring__c</fullName>
    <label>What are we pouring</label>
    <type>TextArea</type>
</CustomField>