force-app/main/default/objects/Concrete_Order__c/fields/Yardage_Originally_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Yardage_Originally_Ordered__c</fullName>
    <label>Yardage Originally Ordered</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>