force-app/main/default/objects/Concrete_Order__c/fields/Yardage_Suggested_by_Field_Crew__c.field-meta.xml
<CustomField>
    <fullName>Yardage_Suggested_by_Field_Crew__c</fullName>
    <label>Yardage Suggested by Field Crew</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>