force-app/main/default/objects/Concrete_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Klient_Project__c</columns>
    <columns>Job__c</columns>
    <columns>What_are_we_pouring__c</columns>
    <columns>DOW__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Actual_Yardage_Ordered__c</columns>
    <columns>Ordered__c</columns>
    <columns>Released__c</columns>
    <columns>Poured__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>