force-app/main/default/objects/Concrete_Order__c/listViews/Concrete_to_Release.listView-meta.xml
<ListView>
    <fullName>Concrete_to_Release</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>What_are_we_pouring__c</columns>
    <columns>DOW__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Actual_Yardage_Ordered__c</columns>
    <columns>Supplier__c</columns>
    <columns>Concrete_Supplier_Phone__c</columns>
    <columns>Released__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered</value>
    </filters>
    <label>Concrete to Release</label>
</ListView>